Switched over to react router v6

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="An alogorithm visualizer built using React and Typescript."
-    />
+    <meta name="description" content="An alogorithm visualizer built using React and Typescript."/>
     <title>AlgoVisual</title>
     <script src="https://kit.fontawesome.com/6b5996c172.js" crossorigin="anonymous"></script>
   </head>
